--- a/style/style.css
+++ b/style/style.css
@@ -90,24 +90,26 @@ h6 {
 
 .wrapper {
   max-width: 100%;
-  margin: 0 0;
 }
 
 .main {
   background: url(https://a0.muscache.com/pictures/cf9f7fb3-2f0a-4730-a08a-e079161b9be3.jpg) center/cover no-repeat;
   display: flex;
-  width: 100%;
-  margin: 0 auto 48px auto;
-  padding: 0 80px;
+  max-width: 100%;
+  margin: 0 0 48px 0;
   height: 55vh;
 }
 .main__content {
+  position: relative;
+  left: 130px;
+  height: 100%;
   color: white;
+  min-width: 1030px;
+}
+.main__subhead {
   position: relative;
   top: 17%;
   left: 7%;
-}
-.main__subhead {
   font-size: 18px;
   display: block;
   text-transform: uppercase;
@@ -115,16 +117,27 @@ h6 {
   font-weight: 700;
 }
 .main__head {
+  position: relative;
+  top: 17%;
+  left: 7%;
   font-size: 60px;
   display: block;
   padding-bottom: 20px;
   max-width: 600px;
 }
 .main__text {
+  position: relative;
+  top: 17%;
+  left: 7%;
   font-size: 20px;
   line-height: 30px;
-  max-width: 600px;
+  max-width: 35%;
   padding-bottom: 20px;
+}
+.main__button {
+  position: relative;
+  top: 17%;
+  left: 7%;
 }
 .main__button button {
   border: none;
@@ -158,6 +171,7 @@ h6 {
 }
 .next__content {
   display: flex;
+  flex: 0 1 33%;
 }
 .next__first {
   margin-left: 200px;
@@ -165,6 +179,9 @@ h6 {
   font-size: 48px;
   line-height: 48px;
   max-width: 500px;
+}
+.next__title {
+  min-width: 416px;
 }
 .next__items {
   display: flex;
@@ -175,7 +192,7 @@ h6 {
 }
 
 .item {
-  width: 350px;
+  max-width: 350px;
   margin-right: 40px;
   padding: 0 20px;
 }
@@ -200,8 +217,8 @@ h6 {
   width: 50%;
 }
 .feedback__img img {
-  width: 100%;
-  height: 100%;
+  min-height: 280px;
+  min-width: 440px;
   border-radius: 18px;
 }
 .feedback__text {
@@ -228,10 +245,12 @@ h6 {
 .start__content {
   position: relative;
   margin: 0 180px;
+  min-width: 830px;
   height: 480px;
   background: url(https://a0.muscache.com/pictures/926c4a0e-0934-480b-bf57-cf770ef2e9cd.jpg) center/cover no-repeat;
   border-radius: 20px;
   color: white;
+  overflow: hidden;
 }
 .start__content::before {
   content: "";
@@ -294,6 +313,7 @@ h6 {
   margin: 0 20px;
 }
 .works__img img {
+  min-width: 280px;
   width: 90%;
   height: 220px;
   border-radius: 20px;
@@ -350,6 +370,7 @@ h6 {
   width: 50%;
 }
 .ask__img img {
+  min-width: 393px;
   -o-object-fit: cover;
      object-fit: cover;
   width: 100%;
@@ -646,4 +667,16 @@ h6 {
 .content__socials li a {
   text-decoration: none;
   color: black;
+}
+
+@media (max-width: 1200px) {
+  .__sections {
+    margin-left: 0;
+    margin-right: 0;
+  }
+  .-content {
+    border-radius: 0;
+    margin-left: 0;
+    margin-right: 0;
+  }
 }/*# sourceMappingURL=style.css.map */
